--- a/package.json
+++ b/package.json
@@ -1,27 +1,31 @@
 {
-  "name": "wbs-node-ts-template",
-  "version": "1.0.0",
-  "description": "",
-  "main": "dist/app.js",
-  "type": "module",
-  "imports": {
-    "#utils": {
-      "development": "./src/utils/index.ts",
-      "default": "./dist/utils/index.js"
-    }
-  },
+  "name": "002_poke-battle",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "dev": "node --watch --conditions development src/app.ts",
-    "prebuild": "rm -rf dist",
-    "build": "tsc",
-    "prestart": "npm run build",
-    "start": "node dist/app.js"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "eslint",
+    "bdev": "node --watch --conditions development src/app.ts",
+    "bprebuild": "rm -rf dist",
+    "bbuild": "tsc",
+    "bprestart": "npm run build",
+    "bstart": "node dist/app.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "dependencies": {
+    "next": "16.1.6",
+    "react": "19.2.3",
+    "react-dom": "19.2.3"
+  },
   "devDependencies": {
-    "@types/node": "^24.0.14",
-    "typescript": "^5.8.3"
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9",
+    "eslint-config-next": "16.1.6",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
